src/golden/functions/errors/test.golden/undeclaredfield.fl
This tests that an appropriate error is produced when a field is called by the wrong name.

	struct HoldIt
		String called

	recoverit (HoldIt e) = e.notcalled
